EXTRA_DIST=\
	$(srcdir)/vs2008/demo_icon_view \
	$(srcdir)/vs2008/demo_icon_view/targetver.h \
	$(srcdir)/vs2008/demo_icon_view/demo_icon_view.vcproj \
	$(srcdir)/vs2008/demo_icon_view/demo_icon_view.ico \
	$(srcdir)/vs2008/demo_icon_view/small.ico \
	$(srcdir)/vs2008/demo_icon_view/Resource.h \
	$(srcdir)/vs2008/demo_icon_view/stdafx.cpp \
	$(srcdir)/vs2008/demo_icon_view/demo_icon_view.h \
	$(srcdir)/vs2008/demo_icon_view/ReadMe.txt \
	$(srcdir)/vs2008/demo_icon_view/demo_icon_view.rc \
	$(srcdir)/vs2008/demo_icon_view/demo_main.cpp \
	$(srcdir)/vs2008/demo_icon_view/stdafx.h \
	$(srcdir)/vs2008/demo_check \
	$(srcdir)/vs2008/demo_check/demo_check.h \
	$(srcdir)/vs2008/demo_check/demo_check.vcproj \
	$(srcdir)/vs2008/demo_check/targetver.h \
	$(srcdir)/vs2008/demo_check/demo_check.ico \
	$(srcdir)/vs2008/demo_check/small.ico \
	$(srcdir)/vs2008/demo_check/Resource.h \
	$(srcdir)/vs2008/demo_check/stdafx.cpp \
	$(srcdir)/vs2008/demo_check/ReadMe.txt \
	$(srcdir)/vs2008/demo_check/demo_check.rc \
	$(srcdir)/vs2008/demo_check/demo_main.cpp \
	$(srcdir)/vs2008/demo_check/stdafx.h \
	$(srcdir)/vs2008/demo_msgbox \
	$(srcdir)/vs2008/demo_msgbox/demo_msgbox.rc \
	$(srcdir)/vs2008/demo_msgbox/targetver.h \
	$(srcdir)/vs2008/demo_msgbox/demo_msgbox.ico \
	$(srcdir)/vs2008/demo_msgbox/demo_msgbox.h \
	$(srcdir)/vs2008/demo_msgbox/small.ico \
	$(srcdir)/vs2008/demo_msgbox/Resource.h \
	$(srcdir)/vs2008/demo_msgbox/demo_msgbox.vcproj \
	$(srcdir)/vs2008/demo_msgbox/stdafx.cpp \
	$(srcdir)/vs2008/demo_msgbox/ReadMe.txt \
	$(srcdir)/vs2008/demo_msgbox/demo_main.cpp \
	$(srcdir)/vs2008/demo_msgbox/stdafx.h \
	$(srcdir)/vs2008/demo_sprite \
	$(srcdir)/vs2008/demo_sprite/targetver.h \
	$(srcdir)/vs2008/demo_sprite/demo_sprite.ico \
	$(srcdir)/vs2008/demo_sprite/demo_sprite.rc \
	$(srcdir)/vs2008/demo_sprite/demo_sprite.vcproj \
	$(srcdir)/vs2008/demo_sprite/small.ico \
	$(srcdir)/vs2008/demo_sprite/Resource.h \
	$(srcdir)/vs2008/demo_sprite/demo_sprite.h \
	$(srcdir)/vs2008/demo_sprite/stdafx.cpp \
	$(srcdir)/vs2008/demo_sprite/ReadMe.txt \
	$(srcdir)/vs2008/demo_sprite/demo_main.cpp \
	$(srcdir)/vs2008/demo_sprite/stdafx.h \
	$(srcdir)/vs2008/demo_transparent \
	$(srcdir)/vs2008/demo_transparent/targetver.h \
	$(srcdir)/vs2008/demo_transparent/demo_transparent.rc \
	$(srcdir)/vs2008/demo_transparent/demo_transparent.h \
	$(srcdir)/vs2008/demo_transparent/small.ico \
	$(srcdir)/vs2008/demo_transparent/demo_transparent.vcproj \
	$(srcdir)/vs2008/demo_transparent/Resource.h \
	$(srcdir)/vs2008/demo_transparent/stdafx.cpp \
	$(srcdir)/vs2008/demo_transparent/ReadMe.txt \
	$(srcdir)/vs2008/demo_transparent/demo_main.cpp \
	$(srcdir)/vs2008/demo_transparent/demo_transparent.ico \
	$(srcdir)/vs2008/demo_transparent/stdafx.h \
	$(srcdir)/vs2008/demo_progress \
	$(srcdir)/vs2008/demo_progress/targetver.h \
	$(srcdir)/vs2008/demo_progress/demo_progress.ico \
	$(srcdir)/vs2008/demo_progress/demo_progress.vcproj \
	$(srcdir)/vs2008/demo_progress/small.ico \
	$(srcdir)/vs2008/demo_progress/Resource.h \
	$(srcdir)/vs2008/demo_progress/stdafx.cpp \
	$(srcdir)/vs2008/demo_progress/ReadMe.txt \
	$(srcdir)/vs2008/demo_progress/demo_progress.rc \
	$(srcdir)/vs2008/demo_progress/demo_main.cpp \
	$(srcdir)/vs2008/demo_progress/stdafx.h \
	$(srcdir)/vs2008/demo_progress/demo_progress.h \
	$(srcdir)/vs2008/ftk.sln \
	$(srcdir)/vs2008/demo_popup \
	$(srcdir)/vs2008/demo_popup/targetver.h \
	$(srcdir)/vs2008/demo_popup/demo_popup.ico \
	$(srcdir)/vs2008/demo_popup/demo_popup.vcproj \
	$(srcdir)/vs2008/demo_popup/demo_popup.rc \
	$(srcdir)/vs2008/demo_popup/small.ico \
	$(srcdir)/vs2008/demo_popup/Resource.h \
	$(srcdir)/vs2008/demo_popup/stdafx.cpp \
	$(srcdir)/vs2008/demo_popup/ReadMe.txt \
	$(srcdir)/vs2008/demo_popup/demo_main.cpp \
	$(srcdir)/vs2008/demo_popup/demo_popup.h \
	$(srcdir)/vs2008/demo_popup/stdafx.h \
	$(srcdir)/vs2008/demo_expand \
	$(srcdir)/vs2008/demo_expand/targetver.h \
	$(srcdir)/vs2008/demo_expand/demo_expand.rc \
	$(srcdir)/vs2008/demo_expand/demo_expand.ico \
	$(srcdir)/vs2008/demo_expand/small.ico \
	$(srcdir)/vs2008/demo_expand/Resource.h \
	$(srcdir)/vs2008/demo_expand/demo_expand.vcproj \
	$(srcdir)/vs2008/demo_expand/demo_expand.h \
	$(srcdir)/vs2008/demo_expand/stdafx.cpp \
	$(srcdir)/vs2008/demo_expand/ReadMe.txt \
	$(srcdir)/vs2008/demo_expand/demo_main.cpp \
	$(srcdir)/vs2008/demo_expand/stdafx.h \
	$(srcdir)/vs2008/ftklua \
	$(srcdir)/vs2008/ftklua/ftklua.vcproj \
	$(srcdir)/vs2008/ftklua/ReadMe.txt \
	$(srcdir)/vs2008/demo_button \
	$(srcdir)/vs2008/demo_button/demo_button.rc \
	$(srcdir)/vs2008/demo_button/demo_button.h \
	$(srcdir)/vs2008/demo_button/targetver.h \
	$(srcdir)/vs2008/demo_button/demo_button.vcproj \
	$(srcdir)/vs2008/demo_button/small.ico \
	$(srcdir)/vs2008/demo_button/Resource.h \
	$(srcdir)/vs2008/demo_button/demo_button.ico \
	$(srcdir)/vs2008/demo_button/stdafx.cpp \
	$(srcdir)/vs2008/demo_button/ReadMe.txt \
	$(srcdir)/vs2008/demo_button/demo_main.cpp \
	$(srcdir)/vs2008/demo_button/stdafx.h \
	$(srcdir)/vs2008/demo_combobox \
	$(srcdir)/vs2008/demo_combobox/targetver.h \
	$(srcdir)/vs2008/demo_combobox/demo_combobox.vcproj \
	$(srcdir)/vs2008/demo_combobox/small.ico \
	$(srcdir)/vs2008/demo_combobox/Resource.h \
	$(srcdir)/vs2008/demo_combobox/demo_combobox.rc \
	$(srcdir)/vs2008/demo_combobox/demo_combobox.h \
	$(srcdir)/vs2008/demo_combobox/demo_combobox.ico \
	$(srcdir)/vs2008/demo_combobox/stdafx.cpp \
	$(srcdir)/vs2008/demo_combobox/ReadMe.txt \
	$(srcdir)/vs2008/demo_combobox/demo_main.cpp \
	$(srcdir)/vs2008/demo_combobox/stdafx.h \
	$(srcdir)/vs2008/ftk.vcproj \
	$(srcdir)/vs2008/demo_menu \
	$(srcdir)/vs2008/demo_menu/demo_menu.h \
	$(srcdir)/vs2008/demo_menu/targetver.h \
	$(srcdir)/vs2008/demo_menu/demo_menu.rc \
	$(srcdir)/vs2008/demo_menu/demo_menu.ico \
	$(srcdir)/vs2008/demo_menu/demo_menu.vcproj \
	$(srcdir)/vs2008/demo_menu/small.ico \
	$(srcdir)/vs2008/demo_menu/Resource.h \
	$(srcdir)/vs2008/demo_menu/stdafx.cpp \
	$(srcdir)/vs2008/demo_menu/ReadMe.txt \
	$(srcdir)/vs2008/demo_menu/demo_main.cpp \
	$(srcdir)/vs2008/demo_menu/stdafx.h \
	$(srcdir)/vs2008/demo_xul \
	$(srcdir)/vs2008/demo_xul/demo_xul.vcproj \
	$(srcdir)/vs2008/demo_xul/targetver.h \
	$(srcdir)/vs2008/demo_xul/demo_xul.ico \
	$(srcdir)/vs2008/demo_xul/demo_xul.rc \
	$(srcdir)/vs2008/demo_xul/small.ico \
	$(srcdir)/vs2008/demo_xul/Resource.h \
	$(srcdir)/vs2008/demo_xul/stdafx.cpp \
	$(srcdir)/vs2008/demo_xul/ReadMe.txt \
	$(srcdir)/vs2008/demo_xul/demo_main.cpp \
	$(srcdir)/vs2008/demo_xul/demo_xul.h \
	$(srcdir)/vs2008/demo_xul/stdafx.h \
	$(srcdir)/vs2008/demo_ime \
	$(srcdir)/vs2008/demo_ime/targetver.h \
	$(srcdir)/vs2008/demo_ime/demo_ime.ico \
	$(srcdir)/vs2008/demo_ime/small.ico \
	$(srcdir)/vs2008/demo_ime/Resource.h \
	$(srcdir)/vs2008/demo_ime/demo_ime.rc \
	$(srcdir)/vs2008/demo_ime/stdafx.cpp \
	$(srcdir)/vs2008/demo_ime/demo_ime.h \
	$(srcdir)/vs2008/demo_ime/ReadMe.txt \
	$(srcdir)/vs2008/demo_ime/demo_ime.vcproj \
	$(srcdir)/vs2008/demo_ime/demo_main.cpp \
	$(srcdir)/vs2008/demo_ime/stdafx.h \
	$(srcdir)/vs2008/stdafx.cpp \
	$(srcdir)/vs2008/demo_textview \
	$(srcdir)/vs2008/demo_textview/targetver.h \
	$(srcdir)/vs2008/demo_textview/demo_textview.ico \
	$(srcdir)/vs2008/demo_textview/demo_textview.h \
	$(srcdir)/vs2008/demo_textview/demo_textview.vcproj \
	$(srcdir)/vs2008/demo_textview/small.ico \
	$(srcdir)/vs2008/demo_textview/Resource.h \
	$(srcdir)/vs2008/demo_textview/stdafx.cpp \
	$(srcdir)/vs2008/demo_textview/ReadMe.txt \
	$(srcdir)/vs2008/demo_textview/demo_textview.rc \
	$(srcdir)/vs2008/demo_textview/demo_main.cpp \
	$(srcdir)/vs2008/demo_textview/stdafx.h \
	$(srcdir)/vs2008/demo_images \
	$(srcdir)/vs2008/demo_images/targetver.h \
	$(srcdir)/vs2008/demo_images/demo_images.h \
	$(srcdir)/vs2008/demo_images/small.ico \
	$(srcdir)/vs2008/demo_images/Resource.h \
	$(srcdir)/vs2008/demo_images/demo_images.vcproj \
	$(srcdir)/vs2008/demo_images/stdafx.cpp \
	$(srcdir)/vs2008/demo_images/ReadMe.txt \
	$(srcdir)/vs2008/demo_images/demo_images.ico \
	$(srcdir)/vs2008/demo_images/demo_main.cpp \
	$(srcdir)/vs2008/demo_images/demo_images.rc \
	$(srcdir)/vs2008/demo_images/stdafx.h \
	$(srcdir)/vs2008/ftklua_run \
	$(srcdir)/vs2008/ftklua_run/ftklua_run.vcproj \
	$(srcdir)/vs2008/ftklua_run/ftklua_run.rc \
	$(srcdir)/vs2008/ftklua_run/targetver.h \
	$(srcdir)/vs2008/ftklua_run/ftklua_run.h \
	$(srcdir)/vs2008/ftklua_run/small.ico \
	$(srcdir)/vs2008/ftklua_run/Resource.h \
	$(srcdir)/vs2008/ftklua_run/ftklua_run.cpp \
	$(srcdir)/vs2008/ftklua_run/ftklua_run.ico \
	$(srcdir)/vs2008/ftklua_run/stdafx.cpp \
	$(srcdir)/vs2008/ftklua_run/ReadMe.txt \
	$(srcdir)/vs2008/ftklua_run/stdafx.h \
	$(srcdir)/vs2008/demo_list_view \
	$(srcdir)/vs2008/demo_list_view/demo_list_view.rc \
	$(srcdir)/vs2008/demo_list_view/targetver.h \
	$(srcdir)/vs2008/demo_list_view/small.ico \
	$(srcdir)/vs2008/demo_list_view/Resource.h \
	$(srcdir)/vs2008/demo_list_view/demo_list_view.h \
	$(srcdir)/vs2008/demo_list_view/stdafx.cpp \
	$(srcdir)/vs2008/demo_list_view/demo_list_view.ico \
	$(srcdir)/vs2008/demo_list_view/ReadMe.txt \
	$(srcdir)/vs2008/demo_list_view/demo_list_view.vcproj \
	$(srcdir)/vs2008/demo_list_view/demo_main.cpp \
	$(srcdir)/vs2008/demo_list_view/stdafx.h \
	$(srcdir)/vs2008/ReadMe.txt \
	$(srcdir)/vs2008/ftk.suo \
	$(srcdir)/vs2008/demo_entry \
	$(srcdir)/vs2008/demo_entry/demo_entry.rc \
	$(srcdir)/vs2008/demo_entry/targetver.h \
	$(srcdir)/vs2008/demo_entry/demo_entry.vcproj \
	$(srcdir)/vs2008/demo_entry/demo_entry.h \
	$(srcdir)/vs2008/demo_entry/demo_entry.ico \
	$(srcdir)/vs2008/demo_entry/small.ico \
	$(srcdir)/vs2008/demo_entry/Resource.h \
	$(srcdir)/vs2008/demo_entry/stdafx.cpp \
	$(srcdir)/vs2008/demo_entry/ReadMe.txt \
	$(srcdir)/vs2008/demo_entry/demo_main.cpp \
	$(srcdir)/vs2008/demo_entry/stdafx.h \
	$(srcdir)/vs2008/demo_alpha \
	$(srcdir)/vs2008/demo_alpha/demo_alpha.vcproj \
	$(srcdir)/vs2008/demo_alpha/targetver.h \
	$(srcdir)/vs2008/demo_alpha/demo_alpha.ico \
	$(srcdir)/vs2008/demo_alpha/demo_alpha.rc \
	$(srcdir)/vs2008/demo_alpha/small.ico \
	$(srcdir)/vs2008/demo_alpha/Resource.h \
	$(srcdir)/vs2008/demo_alpha/stdafx.cpp \
	$(srcdir)/vs2008/demo_alpha/ReadMe.txt \
	$(srcdir)/vs2008/demo_alpha/demo_main.cpp \
	$(srcdir)/vs2008/demo_alpha/demo_alpha.h \
	$(srcdir)/vs2008/demo_alpha/stdafx.h \
	$(srcdir)/vs2008/stdafx.h \
	$(srcdir)/vs2003 \
	$(srcdir)/vs2003/demo_icon_view \
	$(srcdir)/vs2003/demo_icon_view/targetver.h \
	$(srcdir)/vs2003/demo_icon_view/demo_icon_view.vcproj \
	$(srcdir)/vs2003/demo_icon_view/demo_icon_view.ico \
	$(srcdir)/vs2003/demo_icon_view/small.ico \
	$(srcdir)/vs2003/demo_icon_view/Resource.h \
	$(srcdir)/vs2003/demo_icon_view/stdafx.cpp \
	$(srcdir)/vs2003/demo_icon_view/demo_icon_view.h \
	$(srcdir)/vs2003/demo_icon_view/ReadMe.txt \
	$(srcdir)/vs2003/demo_icon_view/demo_icon_view.rc \
	$(srcdir)/vs2003/demo_icon_view/demo_main.cpp \
	$(srcdir)/vs2003/demo_icon_view/stdafx.h \
	$(srcdir)/vs2003/demo_check \
	$(srcdir)/vs2003/demo_check/demo_check.h \
	$(srcdir)/vs2003/demo_check/demo_check.vcproj \
	$(srcdir)/vs2003/demo_check/targetver.h \
	$(srcdir)/vs2003/demo_check/demo_check.ico \
	$(srcdir)/vs2003/demo_check/small.ico \
	$(srcdir)/vs2003/demo_check/Resource.h \
	$(srcdir)/vs2003/demo_check/stdafx.cpp \
	$(srcdir)/vs2003/demo_check/ReadMe.txt \
	$(srcdir)/vs2003/demo_check/demo_check.rc \
	$(srcdir)/vs2003/demo_check/demo_main.cpp \
	$(srcdir)/vs2003/demo_check/stdafx.h \
	$(srcdir)/vs2003/demo_msgbox \
	$(srcdir)/vs2003/demo_msgbox/demo_msgbox.rc \
	$(srcdir)/vs2003/demo_msgbox/targetver.h \
	$(srcdir)/vs2003/demo_msgbox/demo_msgbox.ico \
	$(srcdir)/vs2003/demo_msgbox/demo_msgbox.h \
	$(srcdir)/vs2003/demo_msgbox/small.ico \
	$(srcdir)/vs2003/demo_msgbox/Resource.h \
	$(srcdir)/vs2003/demo_msgbox/demo_msgbox.vcproj \
	$(srcdir)/vs2003/demo_msgbox/stdafx.cpp \
	$(srcdir)/vs2003/demo_msgbox/ReadMe.txt \
	$(srcdir)/vs2003/demo_msgbox/demo_main.cpp \
	$(srcdir)/vs2003/demo_msgbox/stdafx.h \
	$(srcdir)/vs2003/demo_sprite \
	$(srcdir)/vs2003/demo_sprite/targetver.h \
	$(srcdir)/vs2003/demo_sprite/demo_sprite.ico \
	$(srcdir)/vs2003/demo_sprite/demo_sprite.rc \
	$(srcdir)/vs2003/demo_sprite/demo_sprite.vcproj \
	$(srcdir)/vs2003/demo_sprite/small.ico \
	$(srcdir)/vs2003/demo_sprite/Resource.h \
	$(srcdir)/vs2003/demo_sprite/demo_sprite.h \
	$(srcdir)/vs2003/demo_sprite/stdafx.cpp \
	$(srcdir)/vs2003/demo_sprite/ReadMe.txt \
	$(srcdir)/vs2003/demo_sprite/demo_main.cpp \
	$(srcdir)/vs2003/demo_sprite/stdafx.h \
	$(srcdir)/vs2003/demo_transparent \
	$(srcdir)/vs2003/demo_transparent/targetver.h \
	$(srcdir)/vs2003/demo_transparent/demo_transparent.rc \
	$(srcdir)/vs2003/demo_transparent/demo_transparent.h \
	$(srcdir)/vs2003/demo_transparent/small.ico \
	$(srcdir)/vs2003/demo_transparent/demo_transparent.vcproj \
	$(srcdir)/vs2003/demo_transparent/Resource.h \
	$(srcdir)/vs2003/demo_transparent/stdafx.cpp \
	$(srcdir)/vs2003/demo_transparent/ReadMe.txt \
	$(srcdir)/vs2003/demo_transparent/demo_main.cpp \
	$(srcdir)/vs2003/demo_transparent/demo_transparent.ico \
	$(srcdir)/vs2003/demo_transparent/stdafx.h \
	$(srcdir)/vs2003/demo_progress \
	$(srcdir)/vs2003/demo_progress/targetver.h \
	$(srcdir)/vs2003/demo_progress/demo_progress.ico \
	$(srcdir)/vs2003/demo_progress/demo_progress.vcproj \
	$(srcdir)/vs2003/demo_progress/small.ico \
	$(srcdir)/vs2003/demo_progress/Resource.h \
	$(srcdir)/vs2003/demo_progress/stdafx.cpp \
	$(srcdir)/vs2003/demo_progress/ReadMe.txt \
	$(srcdir)/vs2003/demo_progress/demo_progress.rc \
	$(srcdir)/vs2003/demo_progress/demo_main.cpp \
	$(srcdir)/vs2003/demo_progress/stdafx.h \
	$(srcdir)/vs2003/demo_progress/demo_progress.h \
	$(srcdir)/vs2003/ftk.sln \
	$(srcdir)/vs2003/demo_popup \
	$(srcdir)/vs2003/demo_popup/targetver.h \
	$(srcdir)/vs2003/demo_popup/demo_popup.ico \
	$(srcdir)/vs2003/demo_popup/demo_popup.vcproj \
	$(srcdir)/vs2003/demo_popup/demo_popup.rc \
	$(srcdir)/vs2003/demo_popup/small.ico \
	$(srcdir)/vs2003/demo_popup/Resource.h \
	$(srcdir)/vs2003/demo_popup/stdafx.cpp \
	$(srcdir)/vs2003/demo_popup/ReadMe.txt \
	$(srcdir)/vs2003/demo_popup/demo_main.cpp \
	$(srcdir)/vs2003/demo_popup/demo_popup.h \
	$(srcdir)/vs2003/demo_popup/stdafx.h \
	$(srcdir)/vs2003/demo_expand \
	$(srcdir)/vs2003/demo_expand/targetver.h \
	$(srcdir)/vs2003/demo_expand/demo_expand.rc \
	$(srcdir)/vs2003/demo_expand/demo_expand.ico \
	$(srcdir)/vs2003/demo_expand/small.ico \
	$(srcdir)/vs2003/demo_expand/Resource.h \
	$(srcdir)/vs2003/demo_expand/demo_expand.vcproj \
	$(srcdir)/vs2003/demo_expand/demo_expand.h \
	$(srcdir)/vs2003/demo_expand/stdafx.cpp \
	$(srcdir)/vs2003/demo_expand/ReadMe.txt \
	$(srcdir)/vs2003/demo_expand/demo_main.cpp \
	$(srcdir)/vs2003/demo_expand/stdafx.h \
	$(srcdir)/vs2003/demo_button \
	$(srcdir)/vs2003/demo_button/demo_button.rc \
	$(srcdir)/vs2003/demo_button/demo_button.h \
	$(srcdir)/vs2003/demo_button/targetver.h \
	$(srcdir)/vs2003/demo_button/demo_button.vcproj \
	$(srcdir)/vs2003/demo_button/small.ico \
	$(srcdir)/vs2003/demo_button/Resource.h \
	$(srcdir)/vs2003/demo_button/demo_button.ico \
	$(srcdir)/vs2003/demo_button/stdafx.cpp \
	$(srcdir)/vs2003/demo_button/ReadMe.txt \
	$(srcdir)/vs2003/demo_button/demo_main.cpp \
	$(srcdir)/vs2003/demo_button/stdafx.h \
	$(srcdir)/vs2003/demo_combobox \
	$(srcdir)/vs2003/demo_combobox/targetver.h \
	$(srcdir)/vs2003/demo_combobox/demo_combobox.vcproj \
	$(srcdir)/vs2003/demo_combobox/small.ico \
	$(srcdir)/vs2003/demo_combobox/Resource.h \
	$(srcdir)/vs2003/demo_combobox/demo_combobox.rc \
	$(srcdir)/vs2003/demo_combobox/demo_combobox.h \
	$(srcdir)/vs2003/demo_combobox/demo_combobox.ico \
	$(srcdir)/vs2003/demo_combobox/stdafx.cpp \
	$(srcdir)/vs2003/demo_combobox/ReadMe.txt \
	$(srcdir)/vs2003/demo_combobox/demo_main.cpp \
	$(srcdir)/vs2003/demo_combobox/stdafx.h \
	$(srcdir)/vs2003/ftk.vcproj \
	$(srcdir)/vs2003/demo_menu \
	$(srcdir)/vs2003/demo_menu/demo_menu.h \
	$(srcdir)/vs2003/demo_menu/targetver.h \
	$(srcdir)/vs2003/demo_menu/demo_menu.rc \
	$(srcdir)/vs2003/demo_menu/demo_menu.ico \
	$(srcdir)/vs2003/demo_menu/demo_menu.vcproj \
	$(srcdir)/vs2003/demo_menu/small.ico \
	$(srcdir)/vs2003/demo_menu/Resource.h \
	$(srcdir)/vs2003/demo_menu/stdafx.cpp \
	$(srcdir)/vs2003/demo_menu/ReadMe.txt \
	$(srcdir)/vs2003/demo_menu/demo_main.cpp \
	$(srcdir)/vs2003/demo_menu/stdafx.h \
	$(srcdir)/vs2003/demo_xul \
	$(srcdir)/vs2003/demo_xul/demo_xul.vcproj \
	$(srcdir)/vs2003/demo_xul/targetver.h \
	$(srcdir)/vs2003/demo_xul/demo_xul.ico \
	$(srcdir)/vs2003/demo_xul/demo_xul.rc \
	$(srcdir)/vs2003/demo_xul/small.ico \
	$(srcdir)/vs2003/demo_xul/Resource.h \
	$(srcdir)/vs2003/demo_xul/stdafx.cpp \
	$(srcdir)/vs2003/demo_xul/ReadMe.txt \
	$(srcdir)/vs2003/demo_xul/demo_main.cpp \
	$(srcdir)/vs2003/demo_xul/demo_xul.h \
	$(srcdir)/vs2003/demo_xul/stdafx.h \
	$(srcdir)/vs2003/demo_ime \
	$(srcdir)/vs2003/demo_ime/targetver.h \
	$(srcdir)/vs2003/demo_ime/demo_ime.ico \
	$(srcdir)/vs2003/demo_ime/small.ico \
	$(srcdir)/vs2003/demo_ime/Resource.h \
	$(srcdir)/vs2003/demo_ime/demo_ime.rc \
	$(srcdir)/vs2003/demo_ime/stdafx.cpp \
	$(srcdir)/vs2003/demo_ime/demo_ime.h \
	$(srcdir)/vs2003/demo_ime/ReadMe.txt \
	$(srcdir)/vs2003/demo_ime/demo_ime.vcproj \
	$(srcdir)/vs2003/demo_ime/demo_main.cpp \
	$(srcdir)/vs2003/demo_ime/stdafx.h \
	$(srcdir)/vs2003/stdafx.cpp \
	$(srcdir)/vs2003/demo_textview \
	$(srcdir)/vs2003/demo_textview/targetver.h \
	$(srcdir)/vs2003/demo_textview/demo_textview.ico \
	$(srcdir)/vs2003/demo_textview/demo_textview.h \
	$(srcdir)/vs2003/demo_textview/demo_textview.vcproj \
	$(srcdir)/vs2003/demo_textview/small.ico \
	$(srcdir)/vs2003/demo_textview/Resource.h \
	$(srcdir)/vs2003/demo_textview/stdafx.cpp \
	$(srcdir)/vs2003/demo_textview/ReadMe.txt \
	$(srcdir)/vs2003/demo_textview/demo_textview.rc \
	$(srcdir)/vs2003/demo_textview/demo_main.cpp \
	$(srcdir)/vs2003/demo_textview/stdafx.h \
	$(srcdir)/vs2003/demo_images \
	$(srcdir)/vs2003/demo_images/targetver.h \
	$(srcdir)/vs2003/demo_images/demo_images.h \
	$(srcdir)/vs2003/demo_images/small.ico \
	$(srcdir)/vs2003/demo_images/Resource.h \
	$(srcdir)/vs2003/demo_images/demo_images.vcproj \
	$(srcdir)/vs2003/demo_images/stdafx.cpp \
	$(srcdir)/vs2003/demo_images/ReadMe.txt \
	$(srcdir)/vs2003/demo_images/demo_images.ico \
	$(srcdir)/vs2003/demo_images/demo_main.cpp \
	$(srcdir)/vs2003/demo_images/demo_images.rc \
	$(srcdir)/vs2003/demo_images/stdafx.h \
	$(srcdir)/vs2003/demo_list_view \
	$(srcdir)/vs2003/demo_list_view/demo_list_view.rc \
	$(srcdir)/vs2003/demo_list_view/targetver.h \
	$(srcdir)/vs2003/demo_list_view/small.ico \
	$(srcdir)/vs2003/demo_list_view/Resource.h \
	$(srcdir)/vs2003/demo_list_view/demo_list_view.h \
	$(srcdir)/vs2003/demo_list_view/stdafx.cpp \
	$(srcdir)/vs2003/demo_list_view/demo_list_view.ico \
	$(srcdir)/vs2003/demo_list_view/ReadMe.txt \
	$(srcdir)/vs2003/demo_list_view/demo_list_view.vcproj \
	$(srcdir)/vs2003/demo_list_view/demo_main.cpp \
	$(srcdir)/vs2003/demo_list_view/stdafx.h \
	$(srcdir)/vs2003/ReadMe.txt \
	$(srcdir)/vs2003/demo_entry \
	$(srcdir)/vs2003/demo_entry/demo_entry.rc \
	$(srcdir)/vs2003/demo_entry/targetver.h \
	$(srcdir)/vs2003/demo_entry/demo_entry.vcproj \
	$(srcdir)/vs2003/demo_entry/demo_entry.h \
	$(srcdir)/vs2003/demo_entry/demo_entry.ico \
	$(srcdir)/vs2003/demo_entry/small.ico \
	$(srcdir)/vs2003/demo_entry/Resource.h \
	$(srcdir)/vs2003/demo_entry/stdafx.cpp \
	$(srcdir)/vs2003/demo_entry/ReadMe.txt \
	$(srcdir)/vs2003/demo_entry/demo_main.cpp \
	$(srcdir)/vs2003/demo_entry/stdafx.h \
	$(srcdir)/vs2003/demo_alpha \
	$(srcdir)/vs2003/demo_alpha/demo_alpha.vcproj \
	$(srcdir)/vs2003/demo_alpha/targetver.h \
	$(srcdir)/vs2003/demo_alpha/demo_alpha.ico \
	$(srcdir)/vs2003/demo_alpha/demo_alpha.rc \
	$(srcdir)/vs2003/demo_alpha/small.ico \
	$(srcdir)/vs2003/demo_alpha/Resource.h \
	$(srcdir)/vs2003/demo_alpha/stdafx.cpp \
	$(srcdir)/vs2003/demo_alpha/ReadMe.txt \
	$(srcdir)/vs2003/demo_alpha/demo_main.cpp \
	$(srcdir)/vs2003/demo_alpha/demo_alpha.h \
	$(srcdir)/vs2003/demo_alpha/stdafx.h \
	$(srcdir)/vs2003/stdafx.h \
	$(srcdir)/vc6 \
	$(srcdir)/vc6/Readme.txt \
	$(srcdir)/vc6/demo_button \
	$(srcdir)/vc6/demo_button/demo_button.dsp \
	$(srcdir)/vc6/demo_button/StdAfx.h \
	$(srcdir)/vc6/demo_button/StdAfx.cpp \
	$(srcdir)/vc6/demo_button/ReadMe.txt \
	$(srcdir)/vc6/demo_button/demo_main.cpp \
	$(srcdir)/vc6/demo_button/demo_button.plg \
	$(srcdir)/vc6/ftk.dsp \
	$(srcdir)/vc6/ftk.dsw \
	$(srcdir)/ads \
	$(srcdir)/ads/ftk_ads.h \
	$(srcdir)/Makefile.am \
	$(srcdir)/Makefile \
	$(srcdir)/ucos-vs2008 \
	$(srcdir)/ucos-vs2008/demo_icon_view \
	$(srcdir)/ucos-vs2008/demo_icon_view/targetver.h \
	$(srcdir)/ucos-vs2008/demo_icon_view/demo_icon_view.vcproj \
	$(srcdir)/ucos-vs2008/demo_icon_view/demo_icon_view.ico \
	$(srcdir)/ucos-vs2008/demo_icon_view/small.ico \
	$(srcdir)/ucos-vs2008/demo_icon_view/Resource.h \
	$(srcdir)/ucos-vs2008/demo_icon_view/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_icon_view/demo_icon_view.h \
	$(srcdir)/ucos-vs2008/demo_icon_view/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_icon_view/demo_icon_view.rc \
	$(srcdir)/ucos-vs2008/demo_icon_view/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_check \
	$(srcdir)/ucos-vs2008/demo_check/demo_check.h \
	$(srcdir)/ucos-vs2008/demo_check/demo_check.vcproj \
	$(srcdir)/ucos-vs2008/demo_check/targetver.h \
	$(srcdir)/ucos-vs2008/demo_check/demo_check.ico \
	$(srcdir)/ucos-vs2008/demo_check/small.ico \
	$(srcdir)/ucos-vs2008/demo_check/Resource.h \
	$(srcdir)/ucos-vs2008/demo_check/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_check/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_check/demo_check.rc \
	$(srcdir)/ucos-vs2008/demo_check/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_msgbox \
	$(srcdir)/ucos-vs2008/demo_msgbox/demo_msgbox.rc \
	$(srcdir)/ucos-vs2008/demo_msgbox/targetver.h \
	$(srcdir)/ucos-vs2008/demo_msgbox/demo_msgbox.ico \
	$(srcdir)/ucos-vs2008/demo_msgbox/demo_msgbox.h \
	$(srcdir)/ucos-vs2008/demo_msgbox/small.ico \
	$(srcdir)/ucos-vs2008/demo_msgbox/Resource.h \
	$(srcdir)/ucos-vs2008/demo_msgbox/demo_msgbox.vcproj \
	$(srcdir)/ucos-vs2008/demo_msgbox/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_msgbox/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_msgbox/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_sprite \
	$(srcdir)/ucos-vs2008/demo_sprite/targetver.h \
	$(srcdir)/ucos-vs2008/demo_sprite/demo_sprite.ico \
	$(srcdir)/ucos-vs2008/demo_sprite/demo_sprite.rc \
	$(srcdir)/ucos-vs2008/demo_sprite/demo_sprite.vcproj \
	$(srcdir)/ucos-vs2008/demo_sprite/small.ico \
	$(srcdir)/ucos-vs2008/demo_sprite/Resource.h \
	$(srcdir)/ucos-vs2008/demo_sprite/demo_sprite.h \
	$(srcdir)/ucos-vs2008/demo_sprite/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_sprite/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_sprite/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_transparent \
	$(srcdir)/ucos-vs2008/demo_transparent/targetver.h \
	$(srcdir)/ucos-vs2008/demo_transparent/demo_transparent.rc \
	$(srcdir)/ucos-vs2008/demo_transparent/demo_transparent.h \
	$(srcdir)/ucos-vs2008/demo_transparent/small.ico \
	$(srcdir)/ucos-vs2008/demo_transparent/demo_transparent.vcproj \
	$(srcdir)/ucos-vs2008/demo_transparent/Resource.h \
	$(srcdir)/ucos-vs2008/demo_transparent/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_transparent/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_transparent/demo_transparent.ico \
	$(srcdir)/ucos-vs2008/demo_transparent/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_progress \
	$(srcdir)/ucos-vs2008/demo_progress/targetver.h \
	$(srcdir)/ucos-vs2008/demo_progress/demo_progress.ico \
	$(srcdir)/ucos-vs2008/demo_progress/demo_progress.vcproj \
	$(srcdir)/ucos-vs2008/demo_progress/small.ico \
	$(srcdir)/ucos-vs2008/demo_progress/Resource.h \
	$(srcdir)/ucos-vs2008/demo_progress/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_progress/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_progress/demo_progress.rc \
	$(srcdir)/ucos-vs2008/demo_progress/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_progress/demo_progress.h \
	$(srcdir)/ucos-vs2008/demo_popup \
	$(srcdir)/ucos-vs2008/demo_popup/targetver.h \
	$(srcdir)/ucos-vs2008/demo_popup/demo_popup.ico \
	$(srcdir)/ucos-vs2008/demo_popup/demo_popup.vcproj \
	$(srcdir)/ucos-vs2008/demo_popup/demo_popup.rc \
	$(srcdir)/ucos-vs2008/demo_popup/small.ico \
	$(srcdir)/ucos-vs2008/demo_popup/Resource.h \
	$(srcdir)/ucos-vs2008/demo_popup/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_popup/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_popup/demo_popup.h \
	$(srcdir)/ucos-vs2008/demo_popup/stdafx.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM \
	$(srcdir)/ucos-vs2008/UCOS_SIM/UCOS_SIM.suo \
	$(srcdir)/ucos-vs2008/UCOS_SIM/UCOS_SIM.sln \
	$(srcdir)/ucos-vs2008/UCOS_SIM/UCOS_SIM \
	$(srcdir)/ucos-vs2008/UCOS_SIM/UCOS_SIM/UCOS_SIM.vcproj \
	$(srcdir)/ucos-vs2008/UCOS_SIM/UCOS_SIM/ReadMe.txt \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_flag.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_task.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_time.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/ucos_ii.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_sem.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_mbox.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_mutex.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_core.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_mem.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_q.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/ucos_ii.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii/os_dbg_r.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/cfg \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/cfg/includes.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/cfg/os_cfg.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/cfg/app_cfg.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/readme.txt \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-port \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-port/win32 \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-port/win32/os_trace.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-port/win32/os_trace.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-port/win32/os_cpu_c.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-port/win32/os_cpu.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/app \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/app/ucos_sim.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/app/app.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-lib \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-lib/ucos_mutex.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-lib/ucos_mutex.c \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-lib/ucos_pipe.h \
	$(srcdir)/ucos-vs2008/UCOS_SIM/src/ucosii-lib/ucos_pipe.c \
	$(srcdir)/ucos-vs2008/demo_expand \
	$(srcdir)/ucos-vs2008/demo_expand/targetver.h \
	$(srcdir)/ucos-vs2008/demo_expand/demo_expand.rc \
	$(srcdir)/ucos-vs2008/demo_expand/demo_expand.ico \
	$(srcdir)/ucos-vs2008/demo_expand/small.ico \
	$(srcdir)/ucos-vs2008/demo_expand/Resource.h \
	$(srcdir)/ucos-vs2008/demo_expand/demo_expand.vcproj \
	$(srcdir)/ucos-vs2008/demo_expand/demo_expand.h \
	$(srcdir)/ucos-vs2008/demo_expand/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_expand/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_expand/stdafx.h \
	$(srcdir)/ucos-vs2008/ftklua \
	$(srcdir)/ucos-vs2008/ftklua/ftklua.vcproj \
	$(srcdir)/ucos-vs2008/ftklua/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_button \
	$(srcdir)/ucos-vs2008/demo_button/demo_button.rc \
	$(srcdir)/ucos-vs2008/demo_button/demo_button.h \
	$(srcdir)/ucos-vs2008/demo_button/targetver.h \
	$(srcdir)/ucos-vs2008/demo_button/demo_button.vcproj \
	$(srcdir)/ucos-vs2008/demo_button/small.ico \
	$(srcdir)/ucos-vs2008/demo_button/Resource.h \
	$(srcdir)/ucos-vs2008/demo_button/demo_button.ico \
	$(srcdir)/ucos-vs2008/demo_button/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_button/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_button/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_combobox \
	$(srcdir)/ucos-vs2008/demo_combobox/targetver.h \
	$(srcdir)/ucos-vs2008/demo_combobox/demo_combobox.vcproj \
	$(srcdir)/ucos-vs2008/demo_combobox/small.ico \
	$(srcdir)/ucos-vs2008/demo_combobox/Resource.h \
	$(srcdir)/ucos-vs2008/demo_combobox/demo_combobox.rc \
	$(srcdir)/ucos-vs2008/demo_combobox/demo_combobox.h \
	$(srcdir)/ucos-vs2008/demo_combobox/demo_combobox.ico \
	$(srcdir)/ucos-vs2008/demo_combobox/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_combobox/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_combobox/stdafx.h \
	$(srcdir)/ucos-vs2008/ftk.vcproj \
	$(srcdir)/ucos-vs2008/demo_menu \
	$(srcdir)/ucos-vs2008/demo_menu/demo_menu.h \
	$(srcdir)/ucos-vs2008/demo_menu/targetver.h \
	$(srcdir)/ucos-vs2008/demo_menu/demo_menu.rc \
	$(srcdir)/ucos-vs2008/demo_menu/demo_menu.ico \
	$(srcdir)/ucos-vs2008/demo_menu/demo_menu.vcproj \
	$(srcdir)/ucos-vs2008/demo_menu/small.ico \
	$(srcdir)/ucos-vs2008/demo_menu/Resource.h \
	$(srcdir)/ucos-vs2008/demo_menu/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_menu/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_menu/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_xul \
	$(srcdir)/ucos-vs2008/demo_xul/demo_xul.vcproj \
	$(srcdir)/ucos-vs2008/demo_xul/targetver.h \
	$(srcdir)/ucos-vs2008/demo_xul/demo_xul.ico \
	$(srcdir)/ucos-vs2008/demo_xul/demo_xul.rc \
	$(srcdir)/ucos-vs2008/demo_xul/small.ico \
	$(srcdir)/ucos-vs2008/demo_xul/Resource.h \
	$(srcdir)/ucos-vs2008/demo_xul/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_xul/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_xul/demo_xul.h \
	$(srcdir)/ucos-vs2008/demo_xul/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_ime \
	$(srcdir)/ucos-vs2008/demo_ime/targetver.h \
	$(srcdir)/ucos-vs2008/demo_ime/demo_ime.ico \
	$(srcdir)/ucos-vs2008/demo_ime/small.ico \
	$(srcdir)/ucos-vs2008/demo_ime/Resource.h \
	$(srcdir)/ucos-vs2008/demo_ime/demo_ime.rc \
	$(srcdir)/ucos-vs2008/demo_ime/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_ime/demo_ime.h \
	$(srcdir)/ucos-vs2008/demo_ime/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_ime/demo_ime.vcproj \
	$(srcdir)/ucos-vs2008/demo_ime/stdafx.h \
	$(srcdir)/ucos-vs2008/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_textview \
	$(srcdir)/ucos-vs2008/demo_textview/targetver.h \
	$(srcdir)/ucos-vs2008/demo_textview/demo_textview.ico \
	$(srcdir)/ucos-vs2008/demo_textview/demo_textview.h \
	$(srcdir)/ucos-vs2008/demo_textview/demo_textview.vcproj \
	$(srcdir)/ucos-vs2008/demo_textview/small.ico \
	$(srcdir)/ucos-vs2008/demo_textview/Resource.h \
	$(srcdir)/ucos-vs2008/demo_textview/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_textview/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_textview/demo_textview.rc \
	$(srcdir)/ucos-vs2008/demo_textview/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_images \
	$(srcdir)/ucos-vs2008/demo_images/targetver.h \
	$(srcdir)/ucos-vs2008/demo_images/demo_images.h \
	$(srcdir)/ucos-vs2008/demo_images/small.ico \
	$(srcdir)/ucos-vs2008/demo_images/Resource.h \
	$(srcdir)/ucos-vs2008/demo_images/demo_images.vcproj \
	$(srcdir)/ucos-vs2008/demo_images/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_images/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_images/demo_images.ico \
	$(srcdir)/ucos-vs2008/demo_images/demo_images.rc \
	$(srcdir)/ucos-vs2008/demo_images/stdafx.h \
	$(srcdir)/ucos-vs2008/ftklua_run \
	$(srcdir)/ucos-vs2008/ftklua_run/ftklua_run.vcproj \
	$(srcdir)/ucos-vs2008/ftklua_run/ftklua_run.rc \
	$(srcdir)/ucos-vs2008/ftklua_run/targetver.h \
	$(srcdir)/ucos-vs2008/ftklua_run/ftklua_run.h \
	$(srcdir)/ucos-vs2008/ftklua_run/small.ico \
	$(srcdir)/ucos-vs2008/ftklua_run/Resource.h \
	$(srcdir)/ucos-vs2008/ftklua_run/ftklua_run.cpp \
	$(srcdir)/ucos-vs2008/ftklua_run/ftklua_run.ico \
	$(srcdir)/ucos-vs2008/ftklua_run/stdafx.cpp \
	$(srcdir)/ucos-vs2008/ftklua_run/ReadMe.txt \
	$(srcdir)/ucos-vs2008/ftklua_run/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_list_view \
	$(srcdir)/ucos-vs2008/demo_list_view/demo_list_view.rc \
	$(srcdir)/ucos-vs2008/demo_list_view/targetver.h \
	$(srcdir)/ucos-vs2008/demo_list_view/small.ico \
	$(srcdir)/ucos-vs2008/demo_list_view/Resource.h \
	$(srcdir)/ucos-vs2008/demo_list_view/demo_list_view.h \
	$(srcdir)/ucos-vs2008/demo_list_view/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_list_view/demo_list_view.ico \
	$(srcdir)/ucos-vs2008/demo_list_view/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_list_view/demo_list_view.vcproj \
	$(srcdir)/ucos-vs2008/demo_list_view/stdafx.h \
	$(srcdir)/ucos-vs2008/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_entry \
	$(srcdir)/ucos-vs2008/demo_entry/demo_entry.rc \
	$(srcdir)/ucos-vs2008/demo_entry/targetver.h \
	$(srcdir)/ucos-vs2008/demo_entry/demo_entry.vcproj \
	$(srcdir)/ucos-vs2008/demo_entry/demo_entry.h \
	$(srcdir)/ucos-vs2008/demo_entry/demo_entry.ico \
	$(srcdir)/ucos-vs2008/demo_entry/small.ico \
	$(srcdir)/ucos-vs2008/demo_entry/Resource.h \
	$(srcdir)/ucos-vs2008/demo_entry/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_entry/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_entry/stdafx.h \
	$(srcdir)/ucos-vs2008/demo_alpha \
	$(srcdir)/ucos-vs2008/demo_alpha/demo_alpha.vcproj \
	$(srcdir)/ucos-vs2008/demo_alpha/targetver.h \
	$(srcdir)/ucos-vs2008/demo_alpha/demo_alpha.ico \
	$(srcdir)/ucos-vs2008/demo_alpha/demo_alpha.rc \
	$(srcdir)/ucos-vs2008/demo_alpha/small.ico \
	$(srcdir)/ucos-vs2008/demo_alpha/Resource.h \
	$(srcdir)/ucos-vs2008/demo_alpha/stdafx.cpp \
	$(srcdir)/ucos-vs2008/demo_alpha/ReadMe.txt \
	$(srcdir)/ucos-vs2008/demo_alpha/demo_alpha.h \
	$(srcdir)/ucos-vs2008/demo_alpha/stdafx.h \
	$(srcdir)/ucos-vs2008/stdafx.h 
