themedir=$(datadir)/ftk/base/theme/default
theme_DATA=\
	btn_check_off_disable_focused.png \
	btn_check_off_disable.png \
	btn_check_off.png \
	btn_check_off_pressed.png \
	btn_check_off_selected.png \
	btn_check_on_disable_focused.png \
	btn_check_on_disable.png \
	btn_check_on.png \
	btn_check_on_pressed.png \
	btn_check_on_selected.png \
	btn_default_normal_disable_focused.png \
	btn_default_normal_disable.png \
	btn_default_normal.png \
	btn_default_pressed.png \
	btn_default_selected.png \
	btn_radio_label_background.png \
	btn_radio_off.png \
	btn_radio_off_pressed.png \
	btn_radio_off_selected.png \
	btn_radio_on.png \
	btn_radio_on_pressed.png \
	btn_radio_on_selected.png \
	close-32.png \
	close-pressed-32.png \
	cursor.png \
	drop_down_normal.png \
	drop_down_pressed.png \
	drop_down_selected.png \
	flag-32.png \
	highlight_disabled.png \
	highlight_pressed.png \
	highlight_selected.png \
	icon_view_bg.png \
	info.png \
	list_selector_background_disabled.png \
	list_selector_background_focus.png \
	list_selector_background_longpress.png \
	list_selector_background_normal.png \
	list_selector_background_pressed.png \
	list_view_bg.png \
	menuitem_background_focus.png \
	menuitem_background_pressed.png \
	question.png \
	scrollbar_handle_accelerated_anim.png \
	scrollbar_handle_horizontal.png \
	scrollbar_handle_vertical.png \
	status-bg.png \
	wait_box.png \
	warning.png \
	theme.xml \
	animations.xml \
	keyboard.xml \
	folder.png  mime_image.png  mime_text.png \
	mime_unknown.png mime_audio.png up.png \
	progressbar_i_bg.png progressbar_i_cursor.png \
	more.png tab-bar-pressed.png   tab-normal.png \
	tab-selected.png tab-bar-selected.png  tab-pressed.png \
	dialog_bg.png  dialog_title_bg.png  groupbox_bg.png \
	key_board_arrow_left.png   key_board_candidate_hl_bg.png           key_board_down_normal.png  key_board_up_active.png \
	key_board_arrow_right.png  key_board_candidates_area_bg.png        key_board_enter.png        key_board_up_normal.png \
	key_board_bg.png           key_board_candidates_vertical_line.png  key_board_shift_off.png \
	key_board_btn_active.png   key_board_delete.png                    key_board_shift_on.png \
	key_board_btn_normal.png   key_board_down_active.png               key_board_space.png

EXTRA_DIST=$(theme_DATA)
