iconsdir=$(datadir)/ftk/desktop/icons
icons_DATA=paper.jpg tray_handle_normal.png     tray_handle_pressed.png     tray_handle_selected.png \
	tray_handle_normal-h.png  tray_handle_pressed-h.png  tray_handle_selected-h.png \
	0.png  2.png  4.png  6.png  8.png 1.png  3.png  5.png  7.png  9.png colon.png

EXTRA_DIST=$(icons_DATA)

