EXTRA_DIST=\
	$(srcdir)/ftk/ftk_input_method_gpinyin.h\
	$(srcdir)/ftk/ftk_input_method_gpinyin.cpp\
	$(srcdir)/share/ngram.cpp\
	$(srcdir)/share/sync.cpp\
	$(srcdir)/share/spellingtrie.cpp\
	$(srcdir)/share/dicttrie.cpp\
	$(srcdir)/share/dictbuilder.cpp\
	$(srcdir)/share/spellingtable.cpp\
	$(srcdir)/share/splparser.cpp\
	$(srcdir)/share/searchutility.cpp\
	$(srcdir)/share/utf16char.cpp\
	$(srcdir)/share/mystdlib.cpp\
	$(srcdir)/share/utf16reader.cpp\
	$(srcdir)/share/userdict.cpp\
	$(srcdir)/share/matrixsearch.cpp\
	$(srcdir)/share/pinyinime.cpp\
	$(srcdir)/share/lpicache.cpp\
	$(srcdir)/share/dictlist.cpp\
	$(srcdir)/data/rawdict_utf16_65105_freq.txt\
	$(srcdir)/data/valid_utf16.txt\
	$(srcdir)/command/pinyinime_dictbuilder.cpp\
	$(srcdir)/command/test.cpp\
	$(srcdir)/include/splparser.h\
	$(srcdir)/include/dictlist.h\
	$(srcdir)/include/matrixsearch.h\
	$(srcdir)/include/spellingtrie.h\
	$(srcdir)/include/lpicache.h\
	$(srcdir)/include/spellingtable.h\
	$(srcdir)/include/dictbuilder.h\
	$(srcdir)/include/pinyinime.h\
	$(srcdir)/include/userdict.h\
	$(srcdir)/include/utf16reader.h\
	$(srcdir)/include/searchutility.h\
	$(srcdir)/include/ngram.h\
	$(srcdir)/include/atomdictbase.h\
	$(srcdir)/include/utf16char.h\
	$(srcdir)/include/mystdlib.h\
	$(srcdir)/include/sync.h\
	$(srcdir)/include/dicttrie.h\
	$(srcdir)/include/dictdef.h
