EXTRA_DIST=\
	ftk_list_view.idl\
	ftk_main_loop.idl\
	ftk_menu_item.idl\
	ftk_app_window.idl           ftk_menu_panel.idl\
	ftk_bitmap_factory.idl       ftk_mmap.idl\
	ftk_bitmap.idl               ftk_painter.idl\
	ftk_button.idl               ftk_popup_menu.idl\
	ftk_canvas.idl               ftk_progress_bar.idl\
	ftk_check_button.idl         ftk_group_box.idl\
	ftk_clipboard.idl            ftk_scroll_bar.idl\
	ftk_combo_box.idl            ftk_source.idl\
	ftk_dialog.idl               ftk_source_idle.idl\
	ftk_display.idl              ftk_source_timer.idl\
	ftk_entry.idl                ftk_sprite.idl\
	ftk_status_item.idl\
	ftk_status_panel.idl\
	ftk_text_view.idl\
	ftk_icon_cache.idl           ftk_theme.idl\
	ftk_icon_view.idl            ftk_translator.idl\
	ftk.idl                      ftk_typedef.idl\
	ftk_image.idl                ftk_wait_box.idl\
	ftk_label.idl                ftk_widget.idl\
	ftk_list_model_default.idl   ftk_window.idl\
	ftk_list_model.idl           ftk_wnd_manager.idl\
	ftk_list_render_default.idl  ftk_xul.idl\
	ftk_list_render.idl          ftk_file_browser.idl \
	ftk_dir.idl   ftk_file.idl ftk_fs.idl

